# open5gs

./: .gitignore  CHANGES.md  compile_flags.txt  meson_options.txt  open5gs.code-workspace
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: meson-ci.yml
configs/open5gs/: hss.yaml.in
debian/: control
docker/debian/latest/base/: Dockerfile
docs/superpowers/plans/: 2026-05-26-redis-backend-phase-1.md  2026-05-28-redis-backend-phase-2.md  2026-05-28-redis-backend-phase-3.md
docs/superpowers/specs/: 2026-05-26-redis-backend-design.md
lib/core/: diagnostic-broadcast.c  diagnostic-broadcast.h  meson.build  ogs-core.h
lib/dbi/: ims.c  meson.build  ogs-dbi-backend.h  ogs-dbi-core.c  ogs-dbi.h  ogs-mongoc.c  ogs-mongoc.h  session.c  subscription.c
lib/dbi/mongoc/: mongoc-backend.c  mongoc-ims.c  mongoc-internal.h  mongoc-session.c  mongoc-subscription.c  mongoc-watch.c
lib/dbi/redis/: cJSON.c  cJSON.h  redis-backend.c  redis-ims.c  redis-internal.h  redis-session.c  redis-subscription.c  redis-watch.c
src/amf/: amf-sm.c  context.c  ngap-handler.c  nnssf-build.c
src/hss/: hss-context.c  hss-context.h  hss-event.h  hss-sm.c
src/mme/: app-init.c  emm-sm.c  mme-context.c  mme-context.h  mme-sm.c  s1ap-handler.c
src/nssf/: nnssf-handler.h
src/smf/: context.c  gn-handler.c  npcf-handler.c  nsmf-build.h  pfcp-sm.c  s5c-handler.c
tests/: meson.build
tests/dbi/: abts-main.c  backend-registry-test.c  change-event-test.c  meson.build  redis-equivalence-test.c  redis-parse-test.c  run-redis-tests.sh
tests/dbi/fixtures/: subscriber.json
